// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ULThemeCard Component matches snapshot with additional props 1`] = `
<div
  class="text-card-foreground shadow-bevel-2xl flex flex-col gap-6 rounded-4xl px-10 py-10 bg-gray-50/95 backdrop-blur-xl shadow-2xl hover:shadow-purple-500/20 transition-all duration-500 hover:-translate-y-1 border border-white/20 theme-universal:rounded-widget"
  data-slot="card"
  data-testid="card"
  id="test-id"
>
  Test Card
</div>
`;

exports[`ULThemeCard Component matches snapshot with custom className 1`] = `
<div
  class="text-card-foreground shadow-bevel-2xl flex flex-col gap-6 rounded-4xl px-10 py-10 bg-gray-50/95 backdrop-blur-xl shadow-2xl hover:shadow-purple-500/20 transition-all duration-500 hover:-translate-y-1 border border-white/20 theme-universal:rounded-widget custom-class"
  data-slot="card"
>
  Test Card
</div>
`;

exports[`ULThemeCard Component matches snapshot with default props 1`] = `
<div
  class="text-card-foreground shadow-bevel-2xl flex flex-col gap-6 rounded-4xl px-10 py-10 bg-gray-50/95 backdrop-blur-xl shadow-2xl hover:shadow-purple-500/20 transition-all duration-500 hover:-translate-y-1 border border-white/20 theme-universal:rounded-widget"
  data-slot="card"
>
  Test Card
</div>
`;

exports[`ULThemeCard Component matches snapshot with multiple children 1`] = `
<div
  class="text-card-foreground shadow-bevel-2xl flex flex-col gap-6 rounded-4xl px-10 py-10 bg-gray-50/95 backdrop-blur-xl shadow-2xl hover:shadow-purple-500/20 transition-all duration-500 hover:-translate-y-1 border border-white/20 theme-universal:rounded-widget"
  data-slot="card"
>
  <span>
    Child 1
  </span>
  <span>
    Child 2
  </span>
</div>
`;
